--- a/css/style.css
+++ b/css/style.css
@@ -1406,6 +1406,9 @@ form{
         margin-inline: 15px;
         font-size: 0.7rem;
     }
+    .about-content{
+        margin-inline: 15px;
+    }
 }
 
 @media(max-width: 505px){
@@ -1469,6 +1472,8 @@ form{
     }
     footer{
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .copy-right h5{
         font-size: 0.8rem;
