--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,13 @@
 /* menu */
 menu{
     position: fixed;
-    /* display: none; */
     right: -100%;
     width: 200px;
     min-height: 100vh;
     background-color: rgb(26, 23, 23);
-    /* background-color: #FA481A; */
     z-index: 20000;
     box-sizing: border-box; 
     padding-top: 3.5rem;
-    /* opacity: 0.5; */
     transition: all ease-in-out .5s;
 }
 .menu{
@@ -30,7 +27,6 @@ menu{
 }
 .menu-nav-link ul{
     text-align: right;
-    /* border: 1px solid white; */
     display: flex;
     flex-direction: column;
     margin-inline-start: 20px;
@@ -43,7 +39,6 @@ menu{
     list-style: none;
     margin-block: 10px;
     z-index: 1100;
-    /* border: 1px solid white; */
 }
 .menu-nav-link ul li a{
     font-size: 1rem;
@@ -74,10 +69,8 @@ menu{
     
 }
 .menu-nav-link li #register{
-    /* border: 1px solid black; */
     padding-inline: 22px;
     padding-block: 14px;
-    /* margin-top: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,12 +101,10 @@ menu{
     transition: background-color 0.4s ease-in-out;
 }
 .nav.scrolled{
-    /* background-color: black; */
     background-color: rgb(26, 23, 23);
 }
 .nav-logo img{
     width: 9rem;
-    /* border: 1px solid black; */
 }
 .nav-link ul li{
     display: inline-block;
@@ -160,7 +151,6 @@ menu{
     
 }
 .nav-link li #register{
-    /* border: 1px solid black; */
     padding-inline: 22px;
     padding-block: 14px;
     border-radius: 5px;
@@ -184,15 +174,12 @@ menu{
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    /* background-position: center; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     text-align: left;
-    /* border: 1px solid; */
 }
 .content{
-    /* border: 1px solid; */
     width: 28rem;
     margin-right: 40rem;
     margin-bottom: 3rem;
@@ -207,7 +194,6 @@ menu{
     font-size: 0.9rem;
 }
 .buttons{
-    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -252,12 +238,9 @@ menu{
 
 /* about */
 .about{
-    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-wrap: wrap; */
-    /* height: 39rem; */
     padding-block: 6rem 4rem;
     height: auto;
     background-color: #FFFCF8;
@@ -266,7 +249,6 @@ menu{
     width: 33.5rem;
 }
 .about-content{
-    /* border: 1px solid black; */
     width: 33rem;
 }
 .about-content h6{
@@ -286,7 +268,6 @@ menu{
     margin-block: 20px 40px;
 }
 .experience{
-    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -318,12 +299,10 @@ menu{
 
 /* services */
 .services{
-    /* border: 1px solid; */
     padding-top: 6rem;
 }
 .services-header{
     text-align: center;
-    /* border: 1px solid; */
     width: 50%;
 }
 .services-header h6{
@@ -340,13 +319,11 @@ menu{
     font-size: 1rem;
 }
 .services-option{
-    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .services-option .services-option-block{
-    /* border: 1px solid; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -355,15 +332,11 @@ menu{
     gap: 25px;
 }
 .services-option-block .box{
-    /* border: 1px solid; */
     width: 21rem;
     height: 15rem;
     border-radius: 10px;
     box-shadow: 0px 8px 25px #D9D5D9,
     0px 3px 15px #D9D5D9;
-    /* box-shadow: 0 14px 28px rgba(0,0,0,0.25),
-    0 10px 10px rgba(0,0,0,0.22);
-    transition: ease-in-out .3s; */
 }
 .services-option-block .box:hover{
     scale: 1.05;
@@ -411,8 +384,6 @@ menu{
     position: absolute;
     right: 0;
     bottom: -210%;
-    /* z-index: -1; */
-    /* border: 1px solid; */
 }
 .services-dog-two img{
     position: relative;
@@ -421,7 +392,6 @@ menu{
 
 /* stats */
 .stats{
-    /* border: 1px solid; */
     margin-top: 10rem;
     display: flex;
     justify-content: center;
@@ -466,13 +436,11 @@ menu{
 /* Gallery */
 .main-gallery{
     height: 70rem;
-    /* border: 1px solid; */
     padding-block: 7rem 7rem;
     height: auto;
 }
 .gallery-header{
     text-align: center;
-    /* border: 1px solid; */
     width: 50%;
 }
 .gallery-header h6{
@@ -484,14 +452,11 @@ menu{
     font-size: 2.1rem;
 }
 .gallery-header p:nth-child(3){
-    /* margin-inline: 131px; */
     color: grey;
 }
 .gallery{
-    /* border: 1px solid; */
     display: flex;
     margin-top: 3rem;
-    /* align-items: center; */
     justify-content: center;
 }
 .gallery-one{
@@ -508,7 +473,6 @@ menu{
 
 /* pricing */
 .pricing{
-    /* border: 1px solid; */
     background-color: #FFFCF8;
     padding-block: 6.3rem 5rem;
 }
@@ -524,11 +488,9 @@ menu{
     font-size: 2.1rem;
 }
 .pricing-header p:nth-child(3){
-    /* margin-inline: 131px; */
     color: grey;
 }
 .plans{
-    /* border: 1px solid; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -537,7 +499,6 @@ menu{
     padding-block: 2rem;
 }
 .plans-box{
-    /* border: 1px solid; */
     background-color: white;
     width: 20.5rem;
     height: 25rem;
@@ -546,15 +507,10 @@ menu{
     0px 3px 15px #D9D5D9;
 }
 .plan-container{
-    /* border: 1px solid; */
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 6.5rem;
-    /* gap: 7rem; */
-}
-.plan-container .plan-name{
-    /* border: 1px solid; */
 }
 .plan-container .plan-name h3{
     margin: 0;
@@ -566,11 +522,9 @@ menu{
     margin: 0;
     padding: 0;
     font-size: 0.9rem;
-    /* font-weight: 550; */
     color: grey;
 }
 .plan-container .plan-price{
-    /* border: 1px solid; */
     padding-inline: 0.6rem;
     padding-block: 0.3rem;
     border-radius: 10px;
@@ -590,7 +544,6 @@ menu{
     margin: 0;
     padding: 0;
     font-size: 0.95rem;
-    /* font-weight: 550; */
     color: grey;
 }
 .plans-box hr{
@@ -600,7 +553,6 @@ menu{
     color: grey;
 }
 .budget{
-    /* border: 1px solid; */
     padding-block: 0.5rem;
 }
 .budget p{
@@ -612,7 +564,6 @@ menu{
     color: gray;
 }
 .budget span{
-    /* border: 1px solid; */
     padding-inline: 0 0.4rem;
     
 }
@@ -647,7 +598,6 @@ menu{
 
 /* grooming */
 .grooming{
-    /* border: 1px solid; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -656,7 +606,6 @@ menu{
     gap: 7rem;
 }
 .grooming-img{
-    /* border: 1px solid;   */
     margin-top: 15rem; 
 }
 .grooming-img img{
@@ -676,7 +625,6 @@ menu{
     border: none;
     border-radius: 5px;
     font-size: 0.9rem;
-    /* font-weight: bold; */
     color: #FA481A;
     margin-top: 15px;
     cursor: pointer;
@@ -690,7 +638,6 @@ menu{
 
 /* Testimonial */
 .testimonial{
-    /* border: 1px solid; */
     background-color: #FFFCF8;
 }
 .testimonial-header{
@@ -707,7 +654,6 @@ menu{
     font-size: 2.1rem;
 }
 .testimonial-header p:nth-child(3){
-    /* margin-inline: 131px; */
     color: grey;
 }
 .testimonial-hero{
@@ -717,16 +663,15 @@ menu{
 }
 .slide-row{
     display: flex;
-    /* flex-wrap: wrap; */
     width: 3200px;
     transition: 0.5s;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 .slide-col{
     width: 800px;
     height: 400px;
     position: relative;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 .user-img{
     position: absolute;
@@ -816,7 +761,6 @@ menu{
     font-size: 2.1rem;
 }
 .team-header p:nth-child(3){
-    /* margin-inline: 131px; */
     color: grey;
 }
 .team-container{
@@ -856,13 +800,11 @@ menu{
 
 /* question */
 .question{
-    /* border: 1px solid; */
     width: auto;
     height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* flex-wrap: wrap; */
     gap: 20px;
     margin-top: 7rem;
     padding-block: 5rem;
@@ -870,10 +812,7 @@ menu{
     transition: ease-in-out 0.5s;
 }
 .question-content{
-    /* border: 1px solid; */
     z-index: 20;
-    /* margin-right: -10%; */
-    /* overflow-y: scroll; */
     height: 40rem;
 }
 .question-content p:nth-child(1){
@@ -888,7 +827,6 @@ menu{
     padding-block: 10px 30px;
 }
 .dropdown-quest .quest div{
-    /* border: 1px solid; */
     background: #fff;
     width: 550px;
     padding-block: 1.5rem;
@@ -906,7 +844,6 @@ menu{
     margin-left: 20px;
     font-size: 1.1rem;
     font-weight: bold;
-    /* transition: ease-in-out 0.5s; */
 
 }
 .quest i{
@@ -915,7 +852,6 @@ menu{
     color: #FA481A;
     cursor: pointer;
     font-size: 1.5rem;
-    /* transition: ease-in-out 0.5s; */
 }
 .quest span h6{
     margin: 0;
@@ -923,24 +859,16 @@ menu{
     margin-inline: 20px 100px;
     padding-block: 20px 0px;
     color: grey;
-    /* transition: ease-in-out 0.5s; */
 }
 .quest span{
     display: none;
-    /* transition: ease-in-out 0.5s; */
 }
-
-/* .active2 {
-    transition: all ease-in-out .4s;
-    border: 1px solid red;
-} */
 
 .quest span.active2{
     display: block;
     transition: all ease-in-out 0.5s;
 }
 .dropdown-quest .quest p{
-    /* border: 1px solid; */
     width: 550px;
     padding-block: 1.5rem;
     border-radius: 5px;
@@ -949,17 +877,14 @@ menu{
     transition: all ease-in-out 0.5s;
 }
 .question .question-dog{
-    /* border: 1px solid; */
     margin: 0;
     padding: 0;
-    /* margin-right: -15%; */
 }
 .question .question-dog img{
     width: 45rem;
 }
 .dog-plate{
     position: absolute;
-    /* border: 1px solid; */
     left: -3.5%;
     z-index: -1;
     margin-top: -10%;
@@ -971,10 +896,6 @@ menu{
 .dog-plate2{
     display: none;
     position: absolute;
-    /* z-index: -1; */
-    /* border: 1px solid; */
-    /* left: -3.5%; */
-    /* margin-top: -10%; */
 }
 .dog-plate2 img{
     width: 25rem;
@@ -982,7 +903,6 @@ menu{
 
 /* footer */
 footer{
-    /* border: 1px solid; */
     height: auto;
     display: flex;
     justify-content: center;
@@ -990,13 +910,6 @@ footer{
     flex-wrap: wrap;
     gap: 50px;
     padding-block: 7rem;
-}
-footer .footer-content{
-    /* width: 15%; */
-}
-footer .footer-content-one{
-    /* border: 1px solid; */
-    /* width: 20%; */
 }
 .footer-content-one p{
     font-size: 0.85rem;
@@ -1009,7 +922,6 @@ footer .footer-content-one{
 }
 .footer-content-one span{
     padding-inline: 0px 15px;
-    /* font-weight: none; */
 }
 .footer-content-one i{
     font-size: 1.4rem;
@@ -1046,7 +958,6 @@ footer .footer-content-one{
 form{
     display: flex;
     width: fit-content;
-    /* border: 1px solid; */
     box-shadow: 0px 8px 25px #D9D5D9,
     0px 3px 15px #D9D5D9;
     margin-top: 2rem;
@@ -1055,7 +966,6 @@ form{
     padding: 5px;
     padding-block: 10px;
     padding-inline: 13px 8px;
-    /* border: 1px solid ; */
 }
 .maill i{
     font-size: 1.5rem;
@@ -1083,11 +993,9 @@ form{
 }
 .navigate i{
     font-size: 1.2rem;
-    /* margin-top: 5px; */
     color: #fff;
 }
 .copy-right{
-    /* border: 1px solid; */
     padding-block: 25px;
     align-items: center;
 }
@@ -1477,6 +1385,9 @@ form{
     }
     .copy-right h5{
         font-size: 0.8rem;
+    }
+    .nav{
+        gap: 35%;
     }
 }
 
