--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,15 @@
 menu{
     position: fixed;
     right: -100%;
-    width: 200px;
+    width: 300px;
     min-height: 100vh;
     background-color: rgb(26, 23, 23);
     z-index: 20000;
     box-sizing: border-box; 
     padding-top: 3.5rem;
     transition: all ease-in-out .5s;
+    display: flex;
+    justify-content: center;
 }
 .menu{
     display: none;
@@ -29,19 +31,20 @@ menu{
     text-align: right;
     display: flex;
     flex-direction: column;
-    margin-inline-start: 20px;
+    margin-inline-start: 0px;
     justify-content: center;
 }
 .menu-nav-link ul li{
     margin-top: 12px;
-    width: max-content;
+    width: 100%;
+    text-align: center;
     position: relative;
     list-style: none;
-    margin-block: 10px;
+    margin-block: 20px;
     z-index: 1100;
 }
 .menu-nav-link ul li a{
-    font-size: 1rem;
+    font-size: 1.1rem;
     font-weight: 550;
     text-decoration: none;
     color: #FA481A;
@@ -102,6 +105,8 @@ menu{
 }
 .nav.scrolled{
     background-color: rgb(26, 23, 23);
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
 }
 .nav-logo img{
     width: 9rem;
@@ -1126,19 +1131,20 @@ form{
         top: 0;
         right: 0;
         color: #d82f05;
-        font-size: 2rem;
-        margin-inline: 20px;
-        margin-block: 10px;
+        font-size: 2.2rem;
+        margin-inline: 30px;
+        margin-block: 20px;
         cursor: pointer;
     }
+    .menu-nav-link li #register{
+        padding-inline: 40px;
+    }   
     .question-dog{
         display: none;
     }
     .container{
         background-size: contain;
     }
-   
-
 }
 
 @media(max-width: 991px){
@@ -1271,7 +1277,37 @@ form{
         font-size: 2.5rem;
     }
 }
-
+@media(max-width: 570px){
+    menu{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0.99;
+        padding-top: 0;
+    }
+    #close-menu{
+        position: absolute;
+        top: 0;
+        right: 0;
+        color: #d82f05;
+        font-size: 2.2rem;
+        margin-inline: 22px;
+        margin-block: 20px;
+        cursor: pointer;
+    }
+    .menu-nav-link ul li{
+        width: 100%;
+        text-align: center;
+        margin-block: 20px;
+    }
+    .menu-nav-link ul li a{
+        font-size: 1.2rem;
+    }
+    .menu-nav-link li #register{
+        padding-inline: 40px;
+    }    
+}
 @media(max-width: 552px){
     .question-content p:nth-child(1){
         font-size: 2rem;
