--- a/css/form.css
+++ b/css/form.css
@@ -11,6 +11,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .hero {
   display: flex;
   flex-direction: row;
@@ -37,6 +41,25 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.suc,
+.loginsuc{
+  position: fixed;
+  top: 0;
+  right: -100%;
+  padding-block: 1.2rem;
+  padding-inline: 3rem;
+  border-bottom-left-radius: 15px;
+  background-color: palegreen;
+  color: white;
+  font-weight: bold;
+  transition: .3s;
+}
+.suc.active,
+.loginsuc.active{
+  right: 0;
+  transition: .3s;
 }
 
 .hero .right .form {
