--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ menu{
     justify-content: space-evenly;
     align-items: center;
     text-align: left;
+    overflow: hidden;
 }
 .content{
     width: 28rem;
